# cpp-torch-boilerplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  build.sh  main.cpp  setup.bat  setup.ps1
